diagweave/tests/ui/set-algebra/cycle_dependency.stderr
error: cyclic dependency detected: A -> B -> A
  --> tests/ui/set-algebra/cycle_dependency.rs:3:1
   |
 3 | / set! {
 4 | |     A = B | {
 5 | |         AOnly,
...  |
11 | | }
   | |_^
   |
   = note: this error originates in the macro `set` (in Nightly builds, run with -Z macro-backtrace for more info)
