diagweave/tests/ui/set-algebra/cycle_dependency.rs
use diagweave::set;

set! {
    A = B | {
        AOnly,
    }

    B = A | {
        BOnly,
    }
}

fn main() {}